2002-04-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (re_dict): Fix for python 2.x.

	* lilypond-mode.el (LilyPond-xdvi-command): Default to plain xdvi.

	* input/mozart-hrn3-allegro.ly: Bugfix: include defs.

2002-04-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-schrift.mf: lighter staccato.

2002-04-22  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-nummer-code.mf (code): three fixes.

2002-04-21  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.53 released

	* scm/lily.scm (ly-load): use primitive-load for loading.

	* lily/misc.cc: remove quantise_iv()

	* lily/*.cc: pass read-only arrays by reference.
	
	* lily/grob.cc (common_refpoint_of_array): new function. Try to
	use common_refpoint_of_{array, list} when possible.

	* lily/include/accidental-placement.hh: new file.

	* lily/accidental-placement.cc (alignment_callback): position
	accidentals in a better way.

	* lily/skyline.cc: new file. Compute distances for collections of
	boxes.

	* lily/include/skyline.hh: new file

2002-04-20  Han-Wen  <hanwen@cs.uu.nl>

	* lily/accidental.cc (class Accidental_interface): grob for a
	single accidental.

	* lily/accidental-engraver.cc (number_accidentals): Cleanups. Lots
	of reformatting

	* lily/new-accidental-engraver.cc (acknowledge_grob): Work
	together with new accidental-interface. 

	* lily/include/*.hh: remove spurious set_interface() decls.

	* lily/key-signature-interface.cc (brew_molecule): add padding for
	natural signs. Make natural typesetting like the sharp.
	

	* mf/feta-klef.mf: rewrote portion of the G-clef code. Downstroke
	is now slightly curved, not straight.
	

2002-04-18  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Toggles font-lock-multiline (Emacs 21.1 or newer).

	* lilypond-font-lock.el: Handles multiline-strings. Fontifies notes 
	more strictly. Use more clever regular expressions. Commented regexps.

2002-04-16  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: "C-c f" does font-lock-fontify-buffer.
